[tool.poetry]
name = "dotenv-flow"
version = "0.3.1"
description = "Like the dotenv-flow NodeJS library, for Python"
authors = ["Carlos Gonzalez <gonsa.carlos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
tox = "^3.20.0"
pytest = "^6.0.2"
parameterized = "^0.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
