[tool.poetry]
name = "dotenv-flow"
version = "0.3.3"
description = "Like the dotenv-flow NodeJS library, for Python"
authors = ["Carlos Gonzalez <gonsa.carlos@gmail.com>"]
maintainers = ["Carlos Gonzalez <gonsa.carlos@gmail.com>"]
repository = "https://github.com/ChacheGS/dotenv_flow"
readme = "README.md"
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22"
parameterized = "^0.8.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry.core"]
build-backend = "poetry.masonry.api"
